2005-04-07  Tsuyoshi CHO  <tsuyoshi_cho@ybb.ne.jp>

	* shimbun/sb-cnet-jp.el (shimbun-cnet-jp-content-end): Fix value.

2005-04-07  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-rss.el (shimbun-rss-compatible-encoding-alist): New
	variable.
	(shimbun-rss-get-encoding): Return a compatible encoding according
	to shimbun-rss-compatible-encoding-alist.
	(shimbun-rss-find-el): Use dolist instead of mapcar; use consp
	instead of listp; make it work with old xml.el as well.

	* w3m.el (w3m-detect-xml-charset): Return nil if the data don't
	look like xml contents.
	(w3m-compatible-encoding-alist): New variable.
	(w3m-decode-buffer): Always use w3m-detect-xml-charset; use a
	compatible encoding according to w3m-compatible-encoding-alist.

	* w3m-xmas.el (w3m-find-coding-system): Don't return binary for
	the nil argument.

2005-04-06  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-asahi.el (shimbun-asahi-group-table): Improve regexp
	for the rss group.
	(shimbun-asahi-prepare-article): Do nothing for the rss group.

2005-04-04  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-asahi.el (shimbun-asahi-prepare-article): Don't miss
	items for sale in the shopping.kishi group.

2005-03-27  YOSIDA Kozi  <kozi.yosida@nifty.ne.jp>

	* shimbun/sb-nifty-forum.el: New file.

2005-03-25  Katsumi Yamaoka  <yamaoka@jpl.org>

	* Release emacs-w3m-1.4.4 from emacs-w3m-1_4 branch.

2005-03-23  Andreas Seltenreich  <seltenreich@gmx.de>

	* shimbun/sb-zeit-de.el (shimbun-zeit-de-content-end): Don't match
	on advertisements.
	(shimbun-clear-contents): Added to get rid of webbugs and
	advertisements.

2005-03-23  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-xmas.el (w3m-setup-toolbar): Make sure icon files exist.
	(w3m-update-toolbar): Make sure toolbar items have been specified.
	(w3m-initialize-graphic-icons): Make sure icon files exist.

	* w3m-e21.el (w3m-setup-toolbar): Make sure icon files exist.
	(w3m-initialize-graphic-icons): Ditto.
